--- a/index.html
+++ b/index.html
@@ -506,11 +506,7 @@ fimfuncao
                         <li>Ferramentas modernas são muito sensíveis!</li>
                         <li>@SuppressWarnings("all") = código limpo e sem distrações!</li>
                     </ul>
-                    <video class="img-50 img-center" autoplay loop muted playsinline loading="lazy" aria-label="Meme Homer Simpson - representando foco estratégico no código">
-                        <source src="img/homer-bush.webm" type="video/webm">
-                        <source src="img/homer-bush.mp4" type="video/mp4">
-                        <img src="img/homer-bush.gif" alt="Meme Homer Simpson - representando foco estratégico no código">
-                    </video>
+                    <video src="img/homer-bush.webm" class="img-50 img-center" autoplay loop muted playsinline loading="lazy" aria-label="Meme Homer Simpson - representando foco estratégico no código"></video>
                     <blockquote role="note" aria-label="Citação satírica">
                         <p>Se compila, tá pronto pra produção!</p>
                         <cite>POGramador Java produtivo às 18h00</cite>
@@ -702,11 +698,7 @@ fimprocedimento
                         <li>10 pastas "utils", 5 pastas "helpers" = organização perfeita!</li>
                         <li>Caça ao tesouro de código = exercício mental diário!</li>
                     </ul>
-                    <video class="img-center img-50" autoplay loop muted playsinline loading="lazy" aria-label="Meme John Travolta explorando a arquitetura orgânica do projeto">
-                        <source src="img/confused-travolta.webm" type="video/webm">
-                        <source src="img/confused-travolta.mp4" type="video/mp4">
-                        <img src="img/confused-travolta.gif" alt="Meme John Travolta explorando a arquitetura orgânica do projeto">
-                    </video>
+                    <video src="img/confused-travolta.webm" class="img-center img-50" autoplay loop muted playsinline loading="lazy" aria-label="Meme John Travolta explorando a arquitetura orgânica do projeto"></video>
                     <blockquote role="note" aria-label="Citação satírica">
                         <p>Adoro essa liberdade arquitetural!</p>
                         <cite>POGramador apreciando a estrutura orgânica do projeto</cite>
