Melhora métricas Core Web Vitals com otimizações adicionais
- Adiciona preload para imagens LCP (Gregory_XIII, sneak100)
- Adiciona CSS crítico inline para evitar FOUC
- Melhora FCP e LCP com resource hints
- Prioriza carregamento de recursos acima da dobra
- Reduz CLS com fade-in controlado

--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
         <link rel="preload" href="https://cdn.jsdelivr.net/npm/reveal.js@3.9.2/css/reveal.min.css" as="style">
         <link rel="preload" href="https://cdn.jsdelivr.net/npm/reveal.js@3.9.2/js/reveal.min.js" as="script">
 
+        <link rel="preload" href="./img/Gregory_XIII.webp" as="image" type="image/webp">
+        <link rel="preload" href="./img/sneak100.webp" as="image" type="image/webp">
+
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@3.9.2/css/reveal.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@3.9.2/css/theme/solarized.css" id="theme">
         <link rel="stylesheet" href="./css/pog.css">
+
+        <style>
+            .reveal .slides { opacity: 0; }
+            .reveal.ready .slides { opacity: 1; transition: opacity 0.3s; }
+        </style>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@3.9.2/lib/css/zenburn.css" media="print" onload="this.media='all'">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" media="print" onload="this.media='all'">
