Corrige erros de console e acessibilidade restantes
- Corrige TypeError: Reveal.on substituindo por addEventListener
- Adiciona verificação se Reveal está carregado antes de usar
- Usa setTimeout para aguardar carregamento do Reveal.js
- Remove role="main" conflitante (Reveal adiciona role="application")
- Remove role="presentation" dos slides (não necessário)
- Remove user-scalable=no e maximum-scale do viewport
- Permite zoom para usuários com baixa visão
- Mantém responsividade com initial-scale=1.0

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Josenaldo de Oliveira Matos Filho">
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/webp" href="./img/logo.webp">
         <meta name="theme-color" content="#FDF6E3">
         <meta name="color-scheme" content="light dark">
@@ -141,8 +141,8 @@
             </div>
         </aside>
 
-        <main id="main-content" class="reveal" role="main" aria-roledescription="apresentação de slides">
-            <div class="slides" role="presentation">
+        <main id="main-content" class="reveal" aria-roledescription="apresentação de slides">
+            <div class="slides">
                 <section aria-label="Slide 1 de 44 - Título principal">
                     <h1>A arte da Programação Orientada à Gambiarra</h1>
                     <p class="color5-darker">O guia definitivo para escrever código que funciona... até funcionar</p>
